# pico-hid

./: .gitignore  README.md  pyproject.toml  test.py
pico_hid/: __init__.py  ascii_to_hid.py  keyboard.py  mouse.py  serial_com.py
