[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pico-hid"
version = "1.0.0"
dependencies = ["pyserial"]
requires-python = ">=3"
authors = [{ name = "Pradish Bijukchhe", email = "pradish@sandbox.com.np" }]
description = "Python package to control pico spoofed as keyboard/mouse via serial pins (uart)"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = ["Programming Language :: Python :: 3"]

[project.urls]
Homepage = "https://github.com/sandbox-pokhara/pico-hid"
Issues = "https://github.com/sandbox-pokhara/pico-hid/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"pico_hid" = "pico_hid"

[tool.isort]
line_length = 79
force_single_line = true

[tool.black]
line-length = 79
preview = true

[tool.pyright]
typeCheckingMode = "strict"
